# digital-khasanah

./: .firebaserc  .gitignore  README.md  firebase.json  firestore.rules  index.html  package-lock.json  package.json  storage.rules  tsconfig.node.json  vite.config.js
backend/: Cargo.toml
backend/src/: main.rs
backend/src/config/: app_config.rs
backend/src/middlewares/: auth.rs  firebase_auth.rs  mod.rs
backend/src/models/: mod.rs  user.rs
backend/src/routes/: auth.rs  mod.rs  storage.rs
backend/src/services/: firebase.rs  jwt.rs  mod.rs
backend/src/services/firebase/: admin.rs  auth.rs  mod.rs  storage.rs
firebase-export-1749990018332kWxKwV/auth_export/: accounts.json
firebase-export-1749990018332kWxKwV/storage_export/: buckets.json
frontend/: package.json
frontend/public/: dashboard.html  index.html  login.html  register.html
frontend/public/assets/css/: styles.css
frontend/public/assets/js/: auth.js  dashboard.js  file-utils.js  firebase-config.js  firebase.js  login.js  main.js  register.js
functions/: package-lock.json  package.json
functions/lib/: index.js  index.js.map
functions/src/: index.ts
rust-crypto/: Cargo.toml  wasm-pack.toml
rust-crypto/src/: lib.rs  utils.rs
src/: App.tsx  firebase.ts  index.css  main.tsx  verify-config.ts  wasm-bridge-fixed.ts  wasm-loader.d.ts  wasm-loader.js  wasm-types.d.ts
src/components/: AuthPage.tsx  AuthPageNew.tsx  FileManager.tsx  Header.tsx  components.css  enhanced-components.css
src/context/: ThemeContext.tsx
