[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6.20", features = ["headers", "multipart"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["cors", "trace"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
jsonwebtoken = "8.3.0"
bcrypt = "0.15.0"
chrono = { version = "0.4.24", features = ["serde"] }
firebase-admin-sdk = "0.6.0"
base64 = "0.21.0"
futures = "0.3.28"
async-stream = "0.3.5"
bytes = "1.4.0"
mime = "0.3.17"
tokio-util = { version = "0.7.8", features = ["io"] }
# Firebase Admin SDK
firebase-admin-rs = "1.0.0-beta.3"
# Base64 encoding/decoding
base64 = "0.13.0"
