[package]
name = "khasanah-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Digital Khasanah Team"]
description = "Client-side encryption library for Digital Khasanah"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
  "File", "Blob", "FileReader", "ProgressEvent", 
  "console", "Window", "Document"
]}
getrandom = { version = "0.2.10", features = ["js"] }
aes-gcm = "0.10.2"
sha2 = "0.10.7"
base64 = "0.21.4"
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.107"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = 3
lto = true
